force-app/main/default/objects/Contract_Request__c/fields/Additional_Discounts_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Additional_Discounts_Incentives__c</fullName>
    <inlineHelpText>This filed is for any discounts or incentives not addressed in other sections.</inlineHelpText>
    <label>Discounts &amp; Additional Incentives Detail</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>