force-app/main/default/objects/Contract_Request__c/fields/Additional_Products__c.field-meta.xml
<CustomField>
    <fullName>Additional_Products__c</fullName>
    <label>Additional Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>7-way Diagnostic Tool</fullName>
            </value>
            <value>
                <fullName>External Panel Mount</fullName>
            </value>
            <value>
                <fullName>Internal Panel Mount</fullName>
            </value>
            <value>
                <fullName>Low Profile Antenna</fullName>
            </value>
            <value>
                <fullName>Media Display Unit (MDU)</fullName>
            </value>
            <value>
                <fullName>Mounts</fullName>
            </value>
            <value>
                <fullName>Optional Cargo Sensor</fullName>
            </value>
            <value>
                <fullName>Optional Door Sensor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>