force-app/main/default/objects/Contract_Request__c/fields/All_Discounts_Incentives_Requested__c.field-meta.xml
<CustomField>
    <fullName>All_Discounts_Incentives_Requested__c</fullName>
    <inlineHelpText>Please list all discounts or incentives for the deal in this section if approval is required. You do not need to restate them elsewhere in the form unless they are part of a required field.</inlineHelpText>
    <label>Deal Terms and Justifications</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>