force-app/main/default/objects/Contract_Request__c/fields/Amendment_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Purpose__c</fullName>
    <inlineHelpText>e.g., message plan change, hardware purchase.</inlineHelpText>
    <label>Amendment Purpose</label>
    <type>TextArea</type>
</CustomField>