force-app/main/default/objects/Contract_Request__c/fields/Application_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Application_Discounts__c</fullName>
    <label>Application/Services &amp; Discount Details</label>
    <type>TextArea</type>
</CustomField>