force-app/main/default/objects/Contract_Request__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <label>Application Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CoPilot Truck</fullName>
            </value>
            <value>
                <fullName>Amber Alert</fullName>
            </value>
            <value>
                <fullName>Analytics Manager</fullName>
            </value>
            <value>
                <fullName>Content Delivery</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>CSA Safety Performance Service</fullName>
            </value>
            <value>
                <fullName>Data Sharing</fullName>
            </value>
            <value>
                <fullName>Incab Video Training ( Protread )</fullName>
            </value>
            <value>
                <fullName>Driver Workflow</fullName>
            </value>
            <value>
                <fullName>Hours of Service</fullName>
            </value>
            <value>
                <fullName>In-Cab Scanning</fullName>
            </value>
            <value>
                <fullName>Media Manager Service</fullName>
            </value>
            <value>
                <fullName>NaviGo powered by Telogis</fullName>
            </value>
            <value>
                <fullName>Performance Monitoring</fullName>
            </value>
            <value>
                <fullName>Trip Manager</fullName>
            </value>
            <value>
                <fullName>Vehicle Inspection Report</fullName>
            </value>
            <value>
                <fullName>Vehicle Maintenance</fullName>
            </value>
            <value>
                <fullName>Virtual Load View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>