force-app/main/default/objects/Contract_Request__c/fields/Application_Name_Old__c.field-meta.xml
<CustomField>
    <fullName>Application_Name_Old__c</fullName>
    <label>Application Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>