force-app/main/default/objects/Contract_Request__c/fields/Applications_Features__c.field-meta.xml
<CustomField>
    <fullName>Applications_Features__c</fullName>
    <inlineHelpText>1. Go to Customer Portal if no terms and pricing discounts.
2. Content Delivery applies to MCP100 only.</inlineHelpText>
    <label>Applications (only if discounted)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Additional Stored Positions</fullName>
            </value>
            <value>
                <fullName>Amber Alert</fullName>
            </value>
            <value>
                <fullName>Analytics Manager</fullName>
            </value>
            <value>
                <fullName>Automated Arrival and Departure</fullName>
            </value>
            <value>
                <fullName>Circle of Service Workflow</fullName>
            </value>
            <value>
                <fullName>Content Delivery</fullName>
            </value>
            <value>
                <fullName>CoPilot Truck</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting Basic</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting Premium</fullName>
            </value>
            <value>
                <fullName>Cross Street Location</fullName>
            </value>
            <value>
                <fullName>Data Sharing</fullName>
            </value>
            <value>
                <fullName>Driver Direct Navigator</fullName>
            </value>
            <value>
                <fullName>Driver Notification</fullName>
            </value>
            <value>
                <fullName>Driver Workflow</fullName>
            </value>
            <value>
                <fullName>Extended Hardware Warranty</fullName>
            </value>
            <value>
                <fullName>Extended Productivity</fullName>
            </value>
            <value>
                <fullName>Fault Monitoring</fullName>
            </value>
            <value>
                <fullName>Fault Monitoring-Extd Faults (Cummins)</fullName>
            </value>
            <value>
                <fullName>Fault Monitoring-Extd Faults (Navistar)</fullName>
            </value>
            <value>
                <fullName>Fault Monitoring-Extended Faults</fullName>
            </value>
            <value>
                <fullName>FleetAdvisor</fullName>
            </value>
            <value>
                <fullName>GSM Services</fullName>
            </value>
            <value>
                <fullName>Hard Braking</fullName>
            </value>
            <value>
                <fullName>Hours of Service</fullName>
            </value>
            <value>
                <fullName>Hours of Service Macro and Mobile</fullName>
            </value>
            <value>
                <fullName>Hours of Service Mobile</fullName>
            </value>
            <value>
                <fullName>In-Cab Printing</fullName>
            </value>
            <value>
                <fullName>In-Cab Scanning</fullName>
            </value>
            <value>
                <fullName>Incab Video Training ( Protread )</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>