force-app/main/default/objects/Contract_Request__c/fields/Applications_Features_Details__c.field-meta.xml
<CustomField>
    <fullName>Applications_Features_Details__c</fullName>
    <label>Applications/Features Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>