force-app/main/default/objects/Contract_Request__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <inlineHelpText>Date the Contract Request was assigned to a Contracts Administrator</inlineHelpText>
    <label>Assigned</label>
    <type>Date</type>
</CustomField>