force-app/main/default/objects/Contract_Request__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person on the Contracts team to which this request is assigned.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N50000001eMi6EAE</relationshipName>
    <type>Lookup</type>
</CustomField>