force-app/main/default/objects/Contract_Request__c/fields/Beta_Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Beta_Product_Service__c</fullName>
    <inlineHelpText>With Version Number</inlineHelpText>
    <label>Beta Product/Service</label>
    <type>TextArea</type>
</CustomField>