force-app/main/default/objects/Contract_Request__c/fields/Beta_Test_Plan_Document__c.field-meta.xml
<CustomField>
    <fullName>Beta_Test_Plan_Document__c</fullName>
    <inlineHelpText>If Applicable</inlineHelpText>
    <label>Beta Test Plan Document #</label>
    <type>TextArea</type>
</CustomField>