force-app/main/default/objects/Contract_Request__c/fields/Billable_Units_Discount_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Billable_Units_Discount_Eligibility__c</fullName>
    <label>Billable Units Discount Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OT_OE_Retention_Toolkit__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>1%</fullName>
            </value>
            <value>
                <fullName>2%</fullName>
            </value>
            <value>
                <fullName>3%</fullName>
            </value>
            <value>
                <fullName>4%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>6%</fullName>
            </value>
            <value>
                <fullName>7%</fullName>
            </value>
            <value>
                <fullName>8%</fullName>
            </value>
            <value>
                <fullName>9%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>