force-app/main/default/objects/Contract_Request__c/fields/Carrier_Network__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Network__c</fullName>
    <label>Carrier Network</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Service__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cingular GSM</fullName>
            </value>
            <value>
                <fullName>T-Mobile GSM</fullName>
            </value>
            <value>
                <fullName>Sprint PCS CDMA</fullName>
            </value>
            <value>
                <fullName>SMS over Cingular GSM</fullName>
            </value>
            <value>
                <fullName>SMS over Sprint PCS CDMA</fullName>
            </value>
            <value>
                <fullName>Vodafone GSM - International</fullName>
            </value>
            <value>
                <fullName>International GSM/GPRS/EDGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>