force-app/main/default/objects/Contract_Request__c/fields/CDMA_SMS__c.field-meta.xml
<CustomField>
    <fullName>CDMA_SMS__c</fullName>
    <label>CDMA/SMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>