force-app/main/default/objects/Contract_Request__c/fields/Cingular_CDMA__c.field-meta.xml
<CustomField>
    <fullName>Cingular_CDMA__c</fullName>
    <label>Cingular CDMA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>