force-app/main/default/objects/Contract_Request__c/fields/Cingular_GSM_GPRS_EDGE__c.field-meta.xml
<CustomField>
    <fullName>Cingular_GSM_GPRS_EDGE__c</fullName>
    <label>Cingular GSM/GPRS/EDGE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>