force-app/main/default/objects/Contract_Request__c/fields/Compeititors_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Compeititors_Rebate__c</fullName>
    <label>Compeititors Rebate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>