force-app/main/default/objects/Contract_Request__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <label>Compensation</label>
    <type>TextArea</type>
</CustomField>