force-app/main/default/objects/Contract_Request__c/fields/Competitive_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Rebate__c</fullName>
    <inlineHelpText>Competitive Rebate Amount and Number of Terminals</inlineHelpText>
    <label>Competitive Rebate</label>
    <type>TextArea</type>
</CustomField>