force-app/main/default/objects/Contract_Request__c/fields/Contingency_Addendum_requested__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Addendum_requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bert Gillespie&apos;s Approval Required</description>
    <label>Contingency Addendum requested</label>
    <type>Checkbox</type>
</CustomField>