force-app/main/default/objects/Contract_Request__c/fields/Contingency_Contract__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Contract__c</fullName>
    <label>MCP50 Special Offer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>