force-app/main/default/objects/Contract_Request__c/fields/Contingency_Period__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Period__c</fullName>
    <label>Contingency Period</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contingency_Contract__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>90 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>