force-app/main/default/objects/Contract_Request__c/fields/Contract_Origin__c.field-meta.xml
<CustomField>
    <fullName>Contract_Origin__c</fullName>
    <label>Contract Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Drafted</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>