force-app/main/default/objects/Contract_Request__c/fields/Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received__c</fullName>
    <inlineHelpText>Date the contract was received and is still pending QC signature</inlineHelpText>
    <label>Contract Received</label>
    <type>Date</type>
</CustomField>