force-app/main/default/objects/Contract_Request__c/fields/Contract_Request_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request_Duration_Days__c</fullName>
    <formula>IF (ISNULL(Set_up_Complete__c ), null, 
IF (ISNULL(  Submitted_Submitted_for_Approval__c ), 
(IF (ISNULL(  Assigned__c ),  Set_up_Complete__c -  Contract_Received__c,Set_up_Complete__c - Assigned__c)) , Set_up_Complete__c - Submitted_Submitted_for_Approval__c 
))</formula>
    <inlineHelpText>If Set-up is not complete, the duration is calculated by Today minus the submitted date. 
If Set-up is complete, the duration is calculated by the set-up complete date minus the submitted date.</inlineHelpText>
    <label>Contract Request Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>