force-app/main/default/objects/Contract_Request__c/fields/Contract_Source__c.field-meta.xml
<CustomField>
    <fullName>Contract_Source__c</fullName>
    <label>Contract Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_Origin__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Customer Portal</fullName>
            </value>
            <value>
                <fullName>Drafted - Custom</fullName>
            </value>
            <value>
                <fullName>Drafted - Form</fullName>
            </value>
            <value>
                <fullName>Salesforce Content</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>