force-app/main/default/objects/Contract_Request__c/fields/Contracts_Administrator_to_Send__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Administrator_to_Send__c</fullName>
    <label>Contracts Administrator to Send</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>