force-app/main/default/objects/Contract_Request__c/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <label>Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Eval_Conversion__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>