force-app/main/default/objects/Contract_Request__c/fields/Credit_Approved__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approved__c</fullName>
    <label>Credit Approved</label>
    <type>Date</type>
</CustomField>