force-app/main/default/objects/Contract_Request__c/fields/Customer_P_O_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_P_O_Number__c</fullName>
    <label>Customer P.O. Number</label>
    <type>TextArea</type>
</CustomField>