force-app/main/default/objects/Contract_Request__c/fields/Data_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Data_per_Month__c</fullName>
    <inlineHelpText>Per Device</inlineHelpText>
    <label>Data per Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5 MB - International GSM/GPRS/EDGE ($295.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>10 MB - Cingular GSM/GPRS/EDGE ($165.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>10 MB - T-Mobile GSM/GPRS/EDGE ($165.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>10 MB - International GSM/GPRS/EDGE ($545.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>20 MB - Cingular GSM/GPRS/EDGE ($195.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>20 MB - T-Mobile GSM/GPRS/EDGE ($195.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>20 MB - International GSM/GPRS/EDGE ($885.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>50 MB - Cingular GSM/GPRS/EDGE ($230.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>50 MB - T-Mobile GSM/GPRS/EDGE ($230.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>10 MB - Cingular CDMA ($165.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>10 MB - T-Mobile CDMA ($165.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>20 MB - Cingular CDMA ($195.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>20 MB - T-Mobile CDMA ($195.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>50 MB - Cingular CDMA ($230.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>50 MB - T-Mobile CDMA ($230.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>GSM/SMS w/ 500 messages ($195.00 per month per device)</fullName>
            </value>
            <value>
                <fullName>CDMA/SMA w/ 500 messages ($1950.00 per month per device)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>