force-app/main/default/objects/Contract_Request__c/fields/Delivery_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Schedule__c</fullName>
    <label>Delivery Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>30 days from schedule date</fullName>
            </value>
            <value>
                <fullName>60 days from schedule date</fullName>
            </value>
            <value>
                <fullName>90 days from schedule date</fullName>
            </value>
            <value>
                <fullName>12 months from schedule date</fullName>
            </value>
            <value>
                <fullName>24 months from schedule date</fullName>
            </value>
            <value>
                <fullName>36 months from schedule date</fullName>
            </value>
            <value>
                <fullName>During Initial Term</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>