force-app/main/default/objects/Contract_Request__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>It is mandatory to fill the details if you choose &quot;Yes&quot; in Out-of-Guidelines Pricing and Non-Standard Term fields in Contracts Use Only Section.</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>