force-app/main/default/objects/Contract_Request__c/fields/Discount_Incentive_Details__c.field-meta.xml
<CustomField>
    <fullName>Discount_Incentive_Details__c</fullName>
    <label>Discount/Incentive Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>