force-app/main/default/objects/Contract_Request__c/fields/Discounts_Other_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Discounts_Other_Incentives__c</fullName>
    <label>Discounts/Incentives Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Service_Plan__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Add&apos;l Terms: Non-QC Unit Trade-In</fullName>
            </value>
            <value>
                <fullName>Amendment: Retention Toolkit</fullName>
            </value>
            <value>
                <fullName>Competitive Rebate</fullName>
            </value>
            <value>
                <fullName>Driver/Dispatch Training</fullName>
            </value>
            <value>
                <fullName>Extended Warranty</fullName>
            </value>
            <value>
                <fullName>Free Messaging</fullName>
            </value>
            <value>
                <fullName>High Volume Terminal Install</fullName>
            </value>
            <value>
                <fullName>IGPS</fullName>
            </value>
            <value>
                <fullName>In-Service Discount</fullName>
            </value>
            <value>
                <fullName>Installation Training</fullName>
            </value>
            <value>
                <fullName>Mounts</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Off-Hours Discount</fullName>
            </value>
            <value>
                <fullName>Other (please describe)</fullName>
            </value>
            <value>
                <fullName>Panic Button</fullName>
            </value>
            <value>
                <fullName>Qualcomm Authorized Service Installation</fullName>
            </value>
            <value>
                <fullName>Qualcomm Installation</fullName>
            </value>
            <value>
                <fullName>Self-install Credit</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>TrailerTRACS Dry Van</fullName>
            </value>
            <value>
                <fullName>TrailerTRACS Reefer</fullName>
            </value>
            <value>
                <fullName>Web-based SFM Training</fullName>
            </value>
            <value>
                <fullName>Wireless Panic Button</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>