force-app/main/default/objects/Contract_Request__c/fields/Dispatch_Training__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Training__c</fullName>
    <label>Driver/Dispatch Training</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>