force-app/main/default/objects/Contract_Request__c/fields/Distributed__c.field-meta.xml
<CustomField>
    <fullName>Distributed__c</fullName>
    <label>Distributed</label>
    <type>Date</type>
</CustomField>