force-app/main/default/objects/Contract_Request__c/fields/EchoSigned__c.field-meta.xml
<CustomField>
    <fullName>EchoSigned__c</fullName>
    <label>EchoSigned</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>