force-app/main/default/objects/Contract_Request__c/fields/Eval_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Eval_Conversion__c</fullName>
    <label>Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>